# CS-Prophet

./: .gitattributes  .gitignore  CLAUDE.md  README.md  WORKLOG.md  analyze_demo.py  check_labels.py  parse_demos.py  pyproject.toml  requirements.txt  viz_parquet.py
.claude/: settings.local.json
cfg/: gamestate_integration_cs_prophet.cfg
configs/: inference_config.yaml  train_config.smoke.yaml  train_config.yaml  train_config_v2.smoke.yaml  train_config_v2.yaml  train_config_v2_2hz.yaml
dashboard/: app.py  index.html
data/: README.md  viz_log.txt  viz_report.html
docs/: repository-layout.md
notebooks/: 01_eda.ipynb
tests/: test_attention.py  test_dataset.py  test_feature_builder_v2.py  test_features.py  test_gsi_state_builder.py  test_map_utils.py  test_memory_state_builder.py  test_model.py  test_parser.py  test_processed_v2.py  test_realtime_engine_memory_rounds.py  test_state_vector.py  test_state_vector_v2.py  test_train.py
tools/: _rebuild_21.py  analyze_round_predictions.py  batch_extract_parallel.py  batch_extract_v2.py  build_processed_v2.py  compare_offline_vs_realtime.py  compare_real_vs_synth_gsi.py  demo_feature_preview.py  demo_full_extract.py  demo_visualize.py  download_demos.py  eval_at_timepoints.py  gamestate_integration_csprophet.cfg  gsi_capture.py  hltv_config.yaml  memory_debug_findctrl.py  memory_debug_inferno.py  memory_debug_local.py  memory_debug_scan.py  memory_debug_stride.py  memory_dump_players.py  memory_dump_roundresults.py  memory_dump_teams.py  memory_hello.py  memory_verify.py  memory_visualize.py  pipeline.py  (+3 more)
(+60 files in other folders)
